# streamlit-example

./: pyproject.toml  requirements.txt  streamlit_app.py
